fixed z-index bug and changed footer text

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -55,6 +55,7 @@ header, footer {
   font-weight: lighter;
   width: 100%;
   position: fixed;
+  z-index: 99;
 }
 
 footer {
